[tool.poetry]
name = "rl4circopt"
version = "0.1.0"
description = "google's rl for circuit optimization"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
absl-py = "^1.4.0"
numpy = "^1.24.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
